<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp" >

    <!-- Title -->

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:shadowColor="#888"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="3"
            android:text="@string/system"
            android:textColor="@color/text_title"
            android:textSize="30dp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:shadowColor="#888"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="3"
            android:text="@string/e_secrectary"
            android:textColor="@color/text_title"
            android:textSize="30dp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <!-- Username -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/username"
            android:padding="5dp"
            android:singleLine="true" />
        <!-- Password -->

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/logon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:gravity="center"
            android:text="@string/logon"
            android:textColor="@color/text_button"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:paddingTop="15dp"
        android:text="@string/register_account"
        android:textStyle="italic" >
    </Button>

</RelativeLayout>