<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:gravity="center_horizontal|right"
    android:orientation="vertical"
    android:padding="15dp" >

    <!-- Username -->

    <EditText
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/title"
        android:padding="5dp"
        android:singleLine="true" />

    <!-- Password -->

    <EditText
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/content"
        android:lines="1"
        android:padding="5dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/text_button"
        android:textStyle="bold" >
    </Button>

</LinearLayout>