<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="15dp" >

            <Button
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/start_time" />

            <EditText
                android:id="@+id/school"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/schoolName"
                android:padding="5dp" />

            <EditText
                android:id="@+id/class_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/className"
                android:padding="5dp" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/subject"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/lessons"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/lesson_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:prompt="@string/lessons" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/lesson_duration"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/lesson_duration_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:prompt="@string/lesson_duration" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/text_button"
        android:textStyle="bold" />

</LinearLayout>