<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/header"
        android:gravity="center"
        android:text="@string/register"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Username -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/username"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/username"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp" />

            <!-- Password -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/password"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp" />

            <!-- full name -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/fullname"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/fullname"
                    android:singleLine="true" />
            </LinearLayout>
            
            <!-- date of birth -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/dayofbirth"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/dayofbirth"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/dayofbirth"
                    android:singleLine="true" />
            </LinearLayout>

            <!-- gender -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/gender"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/gender_male"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="@color/text_title"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/gender_female"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/text_title"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>

            <!-- e-mail -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/email"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/fullname"
                    android:singleLine="true" />
            </LinearLayout>

            <!-- phone -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/phone"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/phone"
                    android:singleLine="true" />
            </LinearLayout>

            <!-- address -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/address"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/address"
                    android:singleLine="true" />
            </LinearLayout>

            <!-- faculty -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"  >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/faculty"
                    android:textColor="@color/text_title"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/faculty_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:prompt="@string/faculty" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/text_button"
        android:textStyle="bold" >
    </Button>

</LinearLayout>